--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:20-alpine AS build
 WORKDIR /app
 COPY package*.json ./
+RUN date
+RUN ls -al ./
 RUN npm install
 RUN npx update-browserslist-db@latest
 COPY . .
