--- a/source/package.json
+++ b/source/package.json
@@ -24,21 +24,20 @@
 		"@types/eslint": "^8.56.10",
 		"@typescript-eslint/eslint-plugin": "^7.7.1",
 		"@typescript-eslint/parser": "^7.7.1",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.38.0",
+		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"semantic-release": "^23.0.8",
 		"svelte": "^4.2.15",
 		"svelte-check": "^3.6.9",
+		"tailwindcss": "^3.4.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.10"
 	},
-	"type": "module",
-	"dependencies": {
-		"cirrus-ui": "^0.7.2-patch.1",
-		"fraction.js": "^4.3.7"
-	}
+	"type": "module"
 }
