--- a/source/.prettierrc
+++ b/source/.prettierrc
@@ -5,7 +5,8 @@
   "bracketSpacing": true,
   "printWidth": 100,
   "plugins": [
-    "prettier-plugin-svelte"
+    "prettier-plugin-svelte",
+    "prettier-plugin-tailwindcss"
   ],
   "overrides": [
     {
