--- a/source/package.json
+++ b/source/package.json
@@ -31,6 +31,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"semantic-release": "^23.0.8",
 		"svelte": "^4.2.15",
 		"svelte-check": "^3.6.9",
