--- a/source/config/nginx/site.conf
+++ b/source/config/nginx/site.conf
@@ -10,6 +10,6 @@ server {
   gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
   location / {
-    try_files $uri $uri/index.html =404;
+    try_files $uri $uri/ /index.html;
   }
 }
