--- a/source/package.json
+++ b/source/package.json
@@ -20,13 +20,14 @@
 		"@sveltejs/adapter-static": "^3.0.10",
 		"@sveltejs/kit": "^2.49.2",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@tailwindcss/postcss": "^4.1.18",
 		"@types/eslint": "^8.56.12",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
-		"autoprefixer": "^10.4.22",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^2.46.1",
+		"fraction.js": "^5.3.4",
 		"postcss": "^8.5.6",
 		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -34,7 +35,7 @@
 		"semantic-release": "^24.2.9",
 		"svelte": "^4.2.20",
 		"svelte-check": "^4.3.4",
-		"tailwindcss": "^3.4.19",
+		"tailwindcss": "^4.1.18",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3",
 		"vite": "^5.4.21"
